--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -48,18 +48,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/my_info_profile"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:background="@color/trans"
-        android:scaleType="fitCenter"
+        app:civ_border_color="@color/trans"
+        app:civ_border_width="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25"
-        app:srcCompat="@drawable/user_profile" />
+        android:src="@drawable/user_profile" />
+
+
 
     <View
         android:id="@+id/view5"
