--- a/app/src/main/res/layout/home_02_re_01.xml
+++ b/app/src/main/res/layout/home_02_re_01.xml
@@ -36,7 +36,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/user_profile"
-            app:civ_border_color="@color/default1"
+            app:civ_border_color="@color/trans"
             app:civ_border_width="1.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
