--- a/app/src/main/res/layout/home_drawer.xml
+++ b/app/src/main/res/layout/home_drawer.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/home_drawer_profile"
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="spread"
-            app:srcCompat="@drawable/user_profile" />
+            android:src ="@drawable/user_profile" />
 
         <View
             android:id="@+id/view9"
