--- a/app/src/main/res/layout/sign_in_02.xml
+++ b/app/src/main/res/layout/sign_in_02.xml
@@ -206,6 +206,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
+        android:clickable="true"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintHorizontal_bias="0.5"
