--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -208,11 +208,11 @@
         android:id="@+id/home_00_my_info_talk"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center_vertical|start"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="start"
         android:maxLines="3"
-        android:text="없음\n\n\n\n"
+        android:text="없음"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/my_info_talk_B"
         app:layout_constraintEnd_toEndOf="@+id/home_00_my_info_nick"
