--- a/app/src/main/res/layout/home_02_01.xml
+++ b/app/src/main/res/layout/home_02_01.xml
@@ -76,14 +76,14 @@
                 android:id="@+id/home_02_01_book_image"
                 android:layout_width="200dp"
                 android:layout_height="300dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginEnd="10dp"
                 android:background="@color/trans"
                 android:clickable="true"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline24"
                 app:layout_constraintHorizontal_bias="0.497"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline23"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/home_02_default" />
 
