--- a/app/src/main/res/layout/sign_in_02.xml
+++ b/app/src/main/res/layout/sign_in_02.xml
@@ -120,7 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="아이디 입력"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:maxLength="30"
         android:maxLines="1"
         android:privateImeOptions="defaultInputmode=english"
