--- a/app/src/main/res/layout/home_04.xml
+++ b/app/src/main/res/layout/home_04.xml
@@ -37,19 +37,21 @@
             android:layout_gravity="center"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="8dp"
             android:layout_weight="5"
             android:gravity="center"
-            android:text="MyBrary"
+            android:text="Message"
             android:textAlignment="center"
             android:textColor="@color/mybrary_main"
             android:textSize="18sp"
             android:textStyle="bold"
             android:typeface="serif"
+            app:layout_constraintEnd_toStartOf="@+id/home_04_friend_plus"
             app:layout_constraintStart_toEndOf="@+id/home_menu_01_B"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/home_04_search"
+            android:id="@+id/home_04_friend_plus"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginTop="5dp"
@@ -60,7 +62,7 @@
             app:layout_constraintHorizontal_bias="0.98"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/search" />
+            app:srcCompat="@drawable/home_03_friend_plus" />
 
         <View
             android:id="@+id/view8"
@@ -73,6 +75,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/down_line"
+            android:layout_width="0dp"
+            android:layout_height="0.5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -143,25 +157,14 @@
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/down_line"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/home_04__re"
             android:layout_width="0dp"
-            android:layout_height="0.5dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="서비스\n준비중"
-            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/down_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
