--- a/app/src/main/res/layout/home_04_chatting.xml
+++ b/app/src/main/res/layout/home_04_chatting.xml
@@ -127,4 +127,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/camera" />
 
+    <com.github.ybq.android.spinkit.SpinKitView
+        android:id="@+id/chatting_progress"
+        style="@style/SpinKitView.Large.FadingCircle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/home_04_chatting_re"
+        app:layout_constraintEnd_toEndOf="@+id/home_04_chatting_re"
+        app:layout_constraintStart_toStartOf="@+id/home_04_chatting_re"
+        app:layout_constraintTop_toBottomOf="@+id/view20"
+        app:SpinKit_Color="@color/colorAccent"/>
+
 </android.support.constraint.ConstraintLayout>
