--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -8,7 +8,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_me"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline25"
@@ -60,7 +61,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_you"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/time_you"
@@ -131,7 +133,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/home_04_chatting_re_you_image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/time_you_image"
@@ -158,15 +161,18 @@
             android:id="@+id/home_04_chat_main_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:maxWidth="200dp"
             android:padding="7dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guideline30"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/home_04_chat_profile_image"
             app:layout_constraintTop_toBottomOf="@+id/home_04_chat_nick_image"
             app:srcCompat="@drawable/book_01" />
 
@@ -190,6 +196,13 @@
             app:layout_constraintBottom_toTopOf="@+id/time_you_image"
             app:layout_constraintStart_toStartOf="@+id/time_you_image" />
 
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.7" />
+
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
@@ -212,6 +225,7 @@
             android:id="@+id/home_04_chat_main_me_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
@@ -222,6 +236,8 @@
             android:textAlignment="textStart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/guideline31"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/book_01" />
 
@@ -235,6 +251,13 @@
             android:textSize="8sp"
             app:layout_constraintBottom_toTopOf="@+id/time_me_image"
             app:layout_constraintEnd_toEndOf="@+id/time_me_image" />
+
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline31"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.3" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
