--- a/app/src/main/res/layout/home_04_chatting_re.xml
+++ b/app/src/main/res/layout/home_04_chatting_re.xml
@@ -159,6 +159,7 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_image"
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -223,6 +224,7 @@
 
         <ImageView
             android:id="@+id/home_04_chat_main_me_image"
+            android:clickable="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
