--- a/app/src/main/res/layout/home_04_re.xml
+++ b/app/src/main/res/layout/home_04_re.xml
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="10dp"
             android:maxLines="1"
             android:text="내용"
             app:layout_constraintEnd_toStartOf="@+id/home_04_re_time"
@@ -50,8 +50,22 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="15dp"
             android:text="TextView"
-            app:layout_constraintBottom_toBottomOf="@+id/home_04_re_profile"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_re_nick"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/home_04_re_profile" />
+            app:layout_constraintTop_toTopOf="@+id/home_04_re_nick" />
+
+        <TextView
+            android:id="@+id/home_04_message_count"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/message_count"
+            android:gravity="center"
+            android:text="1"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="@+id/home_04_re_main"
+            app:layout_constraintEnd_toEndOf="@+id/home_04_re_time"
+            app:layout_constraintTop_toTopOf="@+id/home_04_re_main" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
