--- a/app/src/main/res/layout/home_01_re.xml
+++ b/app/src/main/res/layout/home_01_re.xml
@@ -17,8 +17,8 @@
 
         <ImageButton
             android:id="@+id/book_image_B"
-            android:layout_width="180dp"
-            android:layout_height="250dp"
+            android:layout_width="200dp"
+            android:layout_height="270dp"
             android:background="@color/trans"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -53,6 +53,7 @@
             android:text="골든아워 1"
             android:textAlignment="center"
             android:textSize="15sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/book_author"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
