--- a/app/src/main/res/layout/home_05_re.xml
+++ b/app/src/main/res/layout/home_05_re.xml
@@ -13,6 +13,7 @@
     app:cardElevation="5dp">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/home_05_cardview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
