--- a/app/src/main/res/layout/sign_in_02.xml
+++ b/app/src/main/res/layout/sign_in_02.xml
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".2" />
+        app:layout_constraintGuide_percent=".35" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline7"
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_percent=".5"
+        app:layout_constraintGuide_percent=".65"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -148,6 +148,7 @@
         android:layout_height="0.3dp"
         android:layout_marginEnd="8dp"
         android:background="@android:color/darker_gray"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/textView48"
         app:layout_constraintEnd_toStartOf="@+id/textView48"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
@@ -159,6 +160,7 @@
         android:layout_height="0.3dp"
         android:layout_marginStart="8dp"
         android:background="@android:color/darker_gray"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/textView48"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toEndOf="@+id/textView48"
@@ -170,6 +172,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="OR"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline9" />
@@ -179,6 +182,7 @@
         android:id="@+id/sign_in_02_face_B"
         android:layout_width="50dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_google_B"
         app:layout_constraintHorizontal_bias="0.5"
@@ -194,6 +198,7 @@
         android:text="Facebook"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_face_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_face_B"
@@ -206,6 +211,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/login_google"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintHorizontal_bias="0.5"
@@ -222,6 +228,7 @@
         android:text="Google"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_google_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_google_B"
@@ -231,6 +238,7 @@
         android:id="@+id/sign_in_02_twitter_B"
         android:layout_width="50dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintHorizontal_bias="0.5"
@@ -245,6 +253,7 @@
         android:text="Twitter"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_twitter_B"
