--- a/app/src/main/res/layout/sign_up_01.xml
+++ b/app/src/main/res/layout/sign_up_01.xml
@@ -125,7 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="164dp" />
+        app:layout_constraintGuide_percent=".4" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline7"
@@ -147,7 +147,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_begin="329dp"
+        app:layout_constraintGuide_percent=".6"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
@@ -156,6 +156,7 @@
         android:layout_height="0.3dp"
         android:layout_marginEnd="1dp"
         android:background="@android:color/darker_gray"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/textView48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline9" />
@@ -165,6 +166,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="OR"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -176,6 +178,7 @@
         android:layout_height="0.3dp"
         android:layout_marginStart="1dp"
         android:background="@android:color/darker_gray"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView48"
         app:layout_constraintTop_toTopOf="@+id/guideline9" />
@@ -184,6 +187,7 @@
         android:id="@+id/sign_in_02_face_B"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_google_B"
         app:layout_constraintHorizontal_bias="0.5"
@@ -199,6 +203,7 @@
         android:text="Facebook"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_face_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_face_B"
@@ -210,6 +215,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintHorizontal_bias="0.5"
@@ -226,6 +232,7 @@
         android:text="Google"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_google_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_google_B"
@@ -235,6 +242,7 @@
         android:id="@+id/sign_in_02_twitter_B"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintHorizontal_bias="0.5"
@@ -249,6 +257,7 @@
         android:text="Twitter"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_twitter_B"
